infra-k8s/mailer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailer-service
spec:
  type: ClusterIP
  selector:
    app: mailer
  ports:
    - port: 8080
      targetPort: 8080
